--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "@leon8ix/utils",
 	"version": "1.1.1",
 	"description": "A collection of all the common utility functions, classes and types I use in most of my projects.",
-	"main": "dist/index.js",
-	"module": "dist/index.js",
-	"types": "dist/index.d.ts",
+	"main": "./dist/index.cjs.js",
+	"module": "./dist/index.esm.js",
+	"types": "./dist/index.d.ts",
 	"author": "8ix",
 	"license": "(private)",
 	"scripts": {
