--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@leon8ix/utils",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"description": "A collection of all the common utility functions, classes and types I use in most of my projects.",
 	"main": "./dist/index.cjs.js",
 	"module": "./dist/index.esm.js",
@@ -12,14 +12,14 @@
 	},
 	"exports": {
 		".": {
+			"types": "./dist/index.d.ts",
 			"import": "./dist/index.esm.js",
-			"require": "./dist/index.cjs.js",
-			"types": "./dist/index.d.ts"
+			"require": "./dist/index.cjs.js"
 		},
 		"./dom": {
+			"types": "./dist/dom/index.d.ts",
 			"import": "./dist/dom/index.esm.js",
-			"require": "./dist/dom/index.cjs.js",
-			"types": "./dist/dom/index.d.ts"
+			"require": "./dist/dom/index.cjs.js"
 		}
 	},
 	"repository": {
