--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "@leon8ix/utils",
-	"version": "1.1.3",
+	"version": "1.1.4",
 	"description": "A collection of all the common utility functions, classes and types I use in most of my projects.",
-	"main": "./dist/index.cjs.js",
-	"module": "./dist/index.esm.js",
 	"types": "./dist/index.d.ts",
+	"module": "./dist/index.mjs",
+	"main": "./dist/index.js",
 	"author": "8ix",
 	"license": "(private)",
 	"scripts": {
@@ -13,13 +13,13 @@
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"import": "./dist/index.esm.js",
-			"require": "./dist/index.cjs.js"
+			"import": "./dist/index.mjs",
+			"require": "./dist/index.js"
 		},
 		"./dom": {
 			"types": "./dist/dom/index.d.ts",
-			"import": "./dist/dom/index.esm.js",
-			"require": "./dist/dom/index.cjs.js"
+			"import": "./dist/dom/index.mjs",
+			"require": "./dist/dom/index.js"
 		}
 	},
 	"repository": {
