--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
 	"name": "@leon8ix/utils",
-	"version": "1.1.4",
+	"version": "1.1.5",
 	"description": "A collection of all the common utility functions, classes and types I use in most of my projects.",
-	"types": "./dist/index.d.ts",
+	"main": "./dist/index.mjs",
 	"module": "./dist/index.mjs",
-	"main": "./dist/index.js",
+	"types": "./dist/index.d.mts",
 	"author": "8ix",
 	"license": "(private)",
 	"scripts": {
-		"build": "tsup src/index.ts src/dom/index.ts --dts --format esm,cjs --out-dir dist"
+		"build": "tsup src/index.ts src/dom/index.ts --dts --format esm --out-dir dist"
 	},
+	"files": [
+		"dist"
+	],
 	"exports": {
 		".": {
-			"types": "./dist/index.d.ts",
-			"import": "./dist/index.mjs",
-			"require": "./dist/index.js"
+			"types": "./dist/index.d.mts",
+			"import": "./dist/index.mjs"
 		},
 		"./dom": {
-			"types": "./dist/dom/index.d.ts",
-			"import": "./dist/dom/index.mjs",
-			"require": "./dist/dom/index.js"
+			"types": "./dist/dom/index.d.mts",
+			"import": "./dist/dom/index.mjs"
 		}
 	},
 	"repository": {
