--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -13,12 +13,21 @@ jobs:
             packages: write
         steps:
             - uses: actions/checkout@v4
-            - uses: actions/setup-node@v4
+
+            - uses: oven-sh/setup-bun@v1
               with:
-                  node-version: 22
-                  registry-url: https://npm.pkg.github.com/
-            - run: npm i
-            - run: npm run build
-            - run: npm publish
-              env:
-                  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+                  bun-version: latest
+
+            - name: Install dependencies
+              run: bun install
+
+            - name: Build package
+              run: bun run build
+
+            - name: Configure npm registry
+              run: |
+                  bun config set registry https://npm.pkg.github.com/
+                  echo "//npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}" > ~/.npmrc
+
+            - name: Publish package
+              run: bun publish
